@startuml
'https://plantuml.com/class-diagram



left to right direction
skinparam BackgroundColor #f5f5f5
skinparam style strictuml
skinparam DefaultFontSize 16
skinparam DefaultFontStyle bold
skinparam ArrowColor #lightgrey
skinparam ArrowThickness 5
hide methods
hide circle
hide empty

<style>
legend {
    BackgroundColor #f5f5f5
    FontColor black
    FontSize 20
}

.p {
    FontColor black
}
</style>


Title Fog Domain Model


class Salesperson {
    name
    mail
    password
    phonenumber
}


legend *See order status in activity diagram


class Customer{
    name
    mail
    password
    phonenumber
}

class Order {
    orderId
    carportId
    customerId
    salespersonId
    date
    *orderStatus
}

class Carport {
    length
    width
}

class CarportItems {
    pillar
    strap
    rafter
}

class Shed {
    length
    width
}


class Itemlist {

}


note left: Hidden until sale


Customer "1"--"*" Order : Customer can place many orders
Order "1"--"1" Carport : Order has one carport
Carport "1"--"0..1" Shed : Carport can have one shed
Itemlist "*"--"*" CarportItems
Salesperson "1"--"*"  Order: Salesperson can manage many orders
Order "1"--"1" Itemlist : Order has one itemlist \n calculated from carport \n measurements
Carport "*"--"*" CarportItems : Items are calculated
Shed "*"--"*" CarportItems


@enduml